# dungeons

./: Cargo.toml  README.md  shell.nix
io/: Cargo.toml
io/src/: connection.rs  error.rs  lib.rs
io/src/codec/: sized.rs
io/src/de/: mod.rs
io/src/de/traits/: deserializer.rs  mod.rs
io/src/derive/: var.rs
io/src/macros/: mod.rs  packets.rs
io/src/ser/: mod.rs
io/src/ser/traits/: mod.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_struct_variant.rs  serialize_tuple.rs  serialize_tuple_struct.rs  serialize_tuple_variant.rs  serializer.rs
io/src/types/: json.rs  maxed.rs  mod.rs  var.rs
protocol/: Cargo.toml
protocol/src/: error.rs  lib.rs
protocol/src/packets/: mod.rs
protocol/src/packets/handshaking/: mod.rs  serverbound.rs
protocol/src/packets/login/: clientbound.rs  serverbound.rs
protocol/src/packets/play/: clientbound.rs  serverbound.rs
protocol/src/packets/status/: clientbound.rs  serverbound.rs
server/: Cargo.toml
server/src/: main.rs
server/src/handlers/: handshaking.rs  mod.rs
server/src/handlers/login/: encryption.rs  login.rs  mod.rs
server/src/handlers/play/: client_settings.rs  mod.rs
server/src/handlers/status/: mod.rs  ping.rs  request.rs
world/: Cargo.toml
world/src/: lib.rs
