[package]
name = "io"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
bytes = { version = "0.5", features = ["serde"] }
tokio = { version = "0.2", features = ["sync"] }
tokio-util = { version = "0.2", features = ["codec"] }
